Added the pages for the flask app to display the table data, added code to convert df to html

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,8 +51,14 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
       <h1>Instructions</h1>
       <h5 class="w3-padding-32">How and when to use the buttons</h5>
 
-      <p class="w3-text-grey">To get the rankings for the prior gameweek, click the 'Make Copies of Tables' button. The model will then pull the ranking from here and use it in the updated tables for the current week. The screen will change to a screen with a button to return to the home page. Next, click on the 'Update Tables' button to run the algorithm and update the tables. Once you're done this, you can click one of the links up top to see the position chart that you desire.</p>
-    </div>
+      <p class="w3-text-grey">To get the rankings for the prior gameweek,
+click the 'Make Copies of Tables' button. The model will then pull the ranking
+from here and use it in the updated tables for the current week. The screen
+will change to a screen with a button to return to the home page. Next, click
+on the 'Update Tables' button to run the algorithm and update the tables. Once
+you're done this, you can click one of the links up top to see the position
+chart that you desire. It is recommended to wait until all bonus points have
+been added by Premier League before running the model.</p> </div>
 
     <div class="w3-third w3-center">
     </div>
@@ -70,8 +76,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
       <h1>Behind The Curtain</h1>
       <h5 class="w3-padding-32">What are the machinations at work?</h5>
 
-      <p class="w3-text-grey">The data is pulled directly from the Premier League API and cleaned for the purposes of our machine learning model. We run the numerical data through a Standard Scaler, then a Random Forest Regressor. The final ranking is a combination of the value, the predicted points, and the form.</p>
-    </div>
+      <p class="w3-text-grey">The data is pulled directly from the Premier
+League API and cleaned for the purposes of our machine learning model. We run
+the numerical data through a Standard Scaler, then a Random Forest Regressor.
+The final ranking is a combination of the value, the predicted points, and the
+form.</p> </div>
   </div>
 </div>
 
