--- a/templates/index.html
+++ b/templates/index.html
@@ -18,19 +18,19 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <div class="w3-top">
   <div class="w3-bar w3-purple w3-card w3-left-align w3-large">
     <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Forwards</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Midfielders</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Defenders</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Goalkeepers</a>
+    <a href="/" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
+    <a href="/forwards" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Forwards</a>
+    <a href="/midfielders" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Midfielders</a>
+    <a href="/defenders" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Defenders</a>
+    <a href="/goalies" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Goalkeepers</a>
   </div>
 
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Forwards</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Midfielders</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Defenders</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Goalkeepers</a>
+    <a href="/forwards" class="w3-bar-item w3-button w3-padding-large">Forwards</a>
+    <a href="/midfielders" class="w3-bar-item w3-button w3-padding-large">Midfielders</a>
+    <a href="/defenders" class="w3-bar-item w3-button w3-padding-large">Defenders</a>
+    <a href="/goalies" class="w3-bar-item w3-button w3-padding-large">Goalkeepers</a>
   </div>
 </div>
 
