corrected incorrect path name. Need to address index issue with importing copy for last week rank.

--- a/templates/defenders.html
+++ b/templates/defenders.html
@@ -2,7 +2,7 @@
   <thead>
     <tr style="text-align: right;">
       <th></th>
-      <th>second_name</th>
+      <th>web_name</th>
       <th>team</th>
       <th>position</th>
       <th>value</th>
@@ -19,7 +19,7 @@
       <td>Leeds</td>
       <td>Defender</td>
       <td>22.600000</td>
-      <td>107.084353</td>
+      <td>108.250946</td>
       <td>5.0</td>
       <td>1.0</td>
       <td>5.0</td>
@@ -30,7 +30,7 @@
       <td>West Ham</td>
       <td>Defender</td>
       <td>20.862069</td>
-      <td>114.341490</td>
+      <td>116.571753</td>
       <td>5.8</td>
       <td>2.0</td>
       <td>4.8</td>
@@ -41,7 +41,7 @@
       <td>Aston Villa</td>
       <td>Defender</td>
       <td>22.400000</td>
-      <td>107.868970</td>
+      <td>107.957415</td>
       <td>5.0</td>
       <td>3.0</td>
       <td>4.5</td>
@@ -52,29 +52,29 @@
       <td>Aston Villa</td>
       <td>Defender</td>
       <td>19.814815</td>
-      <td>105.887177</td>
+      <td>106.007740</td>
       <td>5.4</td>
       <td>4.0</td>
       <td>4.8</td>
     </tr>
     <tr>
       <th>397</th>
-      <td>Gato Alves Dias</td>
+      <td>Dias</td>
       <td>Man City</td>
       <td>Defender</td>
       <td>19.508197</td>
-      <td>119.396772</td>
+      <td>118.320876</td>
       <td>6.1</td>
       <td>5.0</td>
       <td>2.8</td>
     </tr>
     <tr>
       <th>52</th>
-      <td>Konsa Ngoyo</td>
+      <td>Konsa</td>
       <td>Aston Villa</td>
       <td>Defender</td>
       <td>21.086957</td>
-      <td>90.886053</td>
+      <td>89.993864</td>
       <td>4.6</td>
       <td>6.0</td>
       <td>4.5</td>
@@ -85,7 +85,7 @@
       <td>Man Utd</td>
       <td>Defender</td>
       <td>19.464286</td>
-      <td>110.516453</td>
+      <td>111.031936</td>
       <td>5.6</td>
       <td>7.0</td>
       <td>3.3</td>
@@ -96,7 +96,7 @@
       <td>Liverpool</td>
       <td>Defender</td>
       <td>14.861111</td>
-      <td>140.839029</td>
+      <td>141.084371</td>
       <td>7.2</td>
       <td>8.0</td>
       <td>2.2</td>
@@ -107,21 +107,10 @@
       <td>Fulham</td>
       <td>Defender</td>
       <td>20.000000</td>
-      <td>77.116938</td>
+      <td>76.833563</td>
       <td>4.5</td>
       <td>9.0</td>
       <td>5.3</td>
-    </tr>
-    <tr>
-      <th>267</th>
-      <td>Adarabioyo</td>
-      <td>Fulham</td>
-      <td>Defender</td>
-      <td>19.111111</td>
-      <td>82.016324</td>
-      <td>4.5</td>
-      <td>10.0</td>
-      <td>5.0</td>
     </tr>
     <tr>
       <th>413</th>
@@ -129,21 +118,21 @@
       <td>Man Utd</td>
       <td>Defender</td>
       <td>18.181818</td>
-      <td>103.081909</td>
+      <td>104.928344</td>
       <td>5.5</td>
-      <td>11.0</td>
+      <td>10.0</td>
       <td>3.5</td>
     </tr>
     <tr>
-      <th>377</th>
-      <td>Stones</td>
-      <td>Man City</td>
+      <th>267</th>
+      <td>Adarabioyo</td>
+      <td>Fulham</td>
       <td>Defender</td>
-      <td>20.188679</td>
-      <td>98.094674</td>
-      <td>5.3</td>
-      <td>12.0</td>
-      <td>3.0</td>
+      <td>19.111111</td>
+      <td>82.413723</td>
+      <td>4.5</td>
+      <td>11.0</td>
+      <td>5.0</td>
     </tr>
     <tr>
       <th>207</th>
@@ -151,10 +140,21 @@
       <td>Everton</td>
       <td>Defender</td>
       <td>18.823529</td>
-      <td>92.532978</td>
+      <td>92.251044</td>
       <td>5.1</td>
-      <td>13.0</td>
+      <td>12.0</td>
       <td>4.0</td>
+    </tr>
+    <tr>
+      <th>377</th>
+      <td>Stones</td>
+      <td>Man City</td>
+      <td>Defender</td>
+      <td>20.188679</td>
+      <td>95.673681</td>
+      <td>5.3</td>
+      <td>13.0</td>
+      <td>3.0</td>
     </tr>
     <tr>
       <th>649</th>
@@ -162,7 +162,7 @@
       <td>Wolves</td>
       <td>Defender</td>
       <td>17.291667</td>
-      <td>82.341482</td>
+      <td>82.171781</td>
       <td>4.8</td>
       <td>14.0</td>
       <td>5.3</td>
@@ -173,7 +173,7 @@
       <td>Fulham</td>
       <td>Defender</td>
       <td>17.333333</td>
-      <td>74.574363</td>
+      <td>75.638861</td>
       <td>4.5</td>
       <td>15.0</td>
       <td>5.7</td>
@@ -184,7 +184,7 @@
       <td>Man City</td>
       <td>Defender</td>
       <td>17.580645</td>
-      <td>108.517082</td>
+      <td>109.992197</td>
       <td>6.2</td>
       <td>16.0</td>
       <td>2.1</td>
@@ -195,7 +195,7 @@
       <td>Man Utd</td>
       <td>Defender</td>
       <td>16.666667</td>
-      <td>84.648976</td>
+      <td>84.893613</td>
       <td>5.1</td>
       <td>17.0</td>
       <td>4.2</td>
@@ -206,7 +206,7 @@
       <td>Brighton</td>
       <td>Defender</td>
       <td>17.346939</td>
-      <td>83.144219</td>
+      <td>83.074772</td>
       <td>4.9</td>
       <td>18.0</td>
       <td>4.0</td>
@@ -217,7 +217,7 @@
       <td>Burnley</td>
       <td>Defender</td>
       <td>18.000000</td>
-      <td>73.437580</td>
+      <td>73.780899</td>
       <td>4.5</td>
       <td>19.0</td>
       <td>4.1</td>
@@ -228,7 +228,7 @@
       <td>Leicester</td>
       <td>Defender</td>
       <td>20.612245</td>
-      <td>87.323917</td>
+      <td>87.163730</td>
       <td>4.9</td>
       <td>20.0</td>
       <td>1.5</td>
