--- a/templates/forwards.html
+++ b/templates/forwards.html
@@ -2,7 +2,7 @@
   <thead>
     <tr style="text-align: right;">
       <th></th>
-      <th>second_name</th>
+      <th>web_name</th>
       <th>team</th>
       <th>position</th>
       <th>value</th>
@@ -14,37 +14,26 @@
   </thead>
   <tbody>
     <tr>
-      <th>548</th>
-      <td>Kane</td>
-      <td>Spurs</td>
-      <td>Forward</td>
-      <td>14.553571</td>
-      <td>180.455735</td>
-      <td>11.2</td>
-      <td>1.0</td>
-      <td>3.3</td>
-    </tr>
-    <tr>
       <th>312</th>
       <td>Bamford</td>
       <td>Leeds</td>
       <td>Forward</td>
       <td>20.882353</td>
-      <td>132.845468</td>
+      <td>134.693977</td>
       <td>6.8</td>
-      <td>2.0</td>
+      <td>1.0</td>
       <td>3.0</td>
     </tr>
     <tr>
-      <th>278</th>
-      <td>Vardy</td>
-      <td>Leicester</td>
+      <th>548</th>
+      <td>Kane</td>
+      <td>Spurs</td>
       <td>Forward</td>
-      <td>13.137255</td>
-      <td>155.308320</td>
-      <td>10.2</td>
-      <td>3.0</td>
-      <td>3.0</td>
+      <td>14.553571</td>
+      <td>178.982743</td>
+      <td>11.2</td>
+      <td>2.0</td>
+      <td>3.3</td>
     </tr>
     <tr>
       <th>61</th>
@@ -52,10 +41,21 @@
       <td>Aston Villa</td>
       <td>Forward</td>
       <td>17.121212</td>
-      <td>112.128207</td>
+      <td>113.679589</td>
       <td>6.6</td>
-      <td>4.0</td>
+      <td>3.0</td>
       <td>3.7</td>
+    </tr>
+    <tr>
+      <th>278</th>
+      <td>Vardy</td>
+      <td>Leicester</td>
+      <td>Forward</td>
+      <td>13.137255</td>
+      <td>155.906775</td>
+      <td>10.2</td>
+      <td>4.0</td>
+      <td>3.0</td>
     </tr>
     <tr>
       <th>215</th>
@@ -63,18 +63,18 @@
       <td>Everton</td>
       <td>Forward</td>
       <td>16.410256</td>
-      <td>126.606321</td>
+      <td>126.441038</td>
       <td>7.8</td>
       <td>5.0</td>
       <td>2.9</td>
     </tr>
     <tr>
       <th>217</th>
-      <td>de Andrade</td>
+      <td>Richarlison</td>
       <td>Everton</td>
       <td>Forward</td>
       <td>11.392405</td>
-      <td>93.370058</td>
+      <td>93.723910</td>
       <td>7.9</td>
       <td>6.0</td>
       <td>4.9</td>
@@ -85,21 +85,10 @@
       <td>Liverpool</td>
       <td>Forward</td>
       <td>11.086957</td>
-      <td>130.827411</td>
+      <td>124.913774</td>
       <td>9.2</td>
       <td>7.0</td>
       <td>2.7</td>
-    </tr>
-    <tr>
-      <th>524</th>
-      <td>Adams</td>
-      <td>Southampton</td>
-      <td>Forward</td>
-      <td>16.206897</td>
-      <td>87.937731</td>
-      <td>5.8</td>
-      <td>8.0</td>
-      <td>2.4</td>
     </tr>
     <tr>
       <th>153</th>
@@ -107,10 +96,21 @@
       <td>Chelsea</td>
       <td>Forward</td>
       <td>10.652174</td>
-      <td>108.331727</td>
+      <td>112.577532</td>
       <td>9.2</td>
-      <td>9.0</td>
+      <td>8.0</td>
       <td>3.5</td>
+    </tr>
+    <tr>
+      <th>524</th>
+      <td>Adams</td>
+      <td>Southampton</td>
+      <td>Forward</td>
+      <td>16.206897</td>
+      <td>87.426220</td>
+      <td>5.8</td>
+      <td>9.0</td>
+      <td>2.4</td>
     </tr>
     <tr>
       <th>470</th>
@@ -118,7 +118,7 @@
       <td>Newcastle</td>
       <td>Forward</td>
       <td>17.846154</td>
-      <td>105.224297</td>
+      <td>105.732454</td>
       <td>6.5</td>
       <td>10.0</td>
       <td>0.2</td>
@@ -129,7 +129,7 @@
       <td>Brighton</td>
       <td>Forward</td>
       <td>14.262295</td>
-      <td>82.359825</td>
+      <td>83.313090</td>
       <td>6.1</td>
       <td>11.0</td>
       <td>2.6</td>
@@ -140,21 +140,10 @@
       <td>Southampton</td>
       <td>Forward</td>
       <td>11.309524</td>
-      <td>108.354148</td>
+      <td>108.653933</td>
       <td>8.4</td>
       <td>12.0</td>
       <td>2.3</td>
-    </tr>
-    <tr>
-      <th>621</th>
-      <td>Antonio</td>
-      <td>West Ham</td>
-      <td>Forward</td>
-      <td>11.818182</td>
-      <td>75.498953</td>
-      <td>6.6</td>
-      <td>13.0</td>
-      <td>3.0</td>
     </tr>
     <tr>
       <th>5</th>
@@ -162,18 +151,29 @@
       <td>Arsenal</td>
       <td>Forward</td>
       <td>11.111111</td>
-      <td>93.035977</td>
+      <td>94.857111</td>
       <td>8.1</td>
-      <td>14.0</td>
+      <td>13.0</td>
       <td>2.2</td>
     </tr>
     <tr>
+      <th>621</th>
+      <td>Antonio</td>
+      <td>West Ham</td>
+      <td>Forward</td>
+      <td>11.818182</td>
+      <td>75.204118</td>
+      <td>6.6</td>
+      <td>14.0</td>
+      <td>3.0</td>
+    </tr>
+    <tr>
       <th>386</th>
-      <td>de Jesus</td>
+      <td>Jesus</td>
       <td>Man City</td>
       <td>Forward</td>
       <td>8.695652</td>
-      <td>90.522867</td>
+      <td>94.487310</td>
       <td>9.2</td>
       <td>15.0</td>
       <td>3.2</td>
@@ -184,7 +184,7 @@
       <td>Sheffield Utd</td>
       <td>Forward</td>
       <td>13.461538</td>
-      <td>66.186419</td>
+      <td>67.349374</td>
       <td>5.2</td>
       <td>16.0</td>
       <td>1.7</td>
@@ -195,7 +195,7 @@
       <td>Burnley</td>
       <td>Forward</td>
       <td>12.096774</td>
-      <td>76.800981</td>
+      <td>75.777064</td>
       <td>6.2</td>
       <td>17.0</td>
       <td>1.7</td>
@@ -206,7 +206,7 @@
       <td>Fulham</td>
       <td>Forward</td>
       <td>12.830189</td>
-      <td>68.788865</td>
+      <td>68.903591</td>
       <td>5.3</td>
       <td>18.0</td>
       <td>1.6</td>
@@ -217,7 +217,7 @@
       <td>Crystal Palace</td>
       <td>Forward</td>
       <td>10.000000</td>
-      <td>52.423019</td>
+      <td>52.790349</td>
       <td>5.5</td>
       <td>19.0</td>
       <td>2.5</td>
@@ -228,7 +228,7 @@
       <td>Crystal Palace</td>
       <td>Forward</td>
       <td>10.000000</td>
-      <td>57.214377</td>
+      <td>56.495768</td>
       <td>5.6</td>
       <td>20.0</td>
       <td>2.2</td>
