--- a/templates/goalies.html
+++ b/templates/goalies.html
@@ -2,7 +2,7 @@
   <thead>
     <tr style="text-align: right;">
       <th></th>
-      <th>second_name</th>
+      <th>web_name</th>
       <th>team</th>
       <th>position</th>
       <th>value</th>
@@ -19,7 +19,7 @@
       <td>Aston Villa</td>
       <td>Goalkeeper</td>
       <td>27.592593</td>
-      <td>136.800126</td>
+      <td>136.492881</td>
       <td>5.4</td>
       <td>1.0</td>
       <td>7.0</td>
@@ -30,7 +30,7 @@
       <td>Burnley</td>
       <td>Goalkeeper</td>
       <td>22.500000</td>
-      <td>124.478359</td>
+      <td>126.192848</td>
       <td>5.6</td>
       <td>2.0</td>
       <td>3.7</td>
@@ -41,18 +41,18 @@
       <td>Fulham</td>
       <td>Goalkeeper</td>
       <td>23.555556</td>
-      <td>101.004522</td>
+      <td>101.489596</td>
       <td>4.5</td>
       <td>3.0</td>
       <td>5.0</td>
     </tr>
     <tr>
       <th>646</th>
-      <td>dos Santos Patrício</td>
+      <td>Patrício</td>
       <td>Wolves</td>
       <td>Goalkeeper</td>
       <td>19.056604</td>
-      <td>102.279522</td>
+      <td>101.788912</td>
       <td>5.3</td>
       <td>4.0</td>
       <td>5.3</td>
@@ -63,7 +63,7 @@
       <td>West Brom</td>
       <td>Goalkeeper</td>
       <td>20.444444</td>
-      <td>93.127176</td>
+      <td>94.529643</td>
       <td>4.5</td>
       <td>5.0</td>
       <td>5.3</td>
@@ -74,7 +74,7 @@
       <td>Spurs</td>
       <td>Goalkeeper</td>
       <td>19.642857</td>
-      <td>110.590761</td>
+      <td>110.448243</td>
       <td>5.6</td>
       <td>6.0</td>
       <td>4.2</td>
@@ -85,18 +85,18 @@
       <td>Leeds</td>
       <td>Goalkeeper</td>
       <td>22.173913</td>
-      <td>101.329756</td>
+      <td>101.432259</td>
       <td>4.6</td>
       <td>7.0</td>
       <td>3.8</td>
     </tr>
     <tr>
       <th>382</th>
-      <td>Santana de Moraes</td>
+      <td>Ederson</td>
       <td>Man City</td>
       <td>Goalkeeper</td>
       <td>19.508197</td>
-      <td>121.026435</td>
+      <td>121.838546</td>
       <td>6.1</td>
       <td>8.0</td>
       <td>3.2</td>
@@ -107,7 +107,7 @@
       <td>Crystal Palace</td>
       <td>Goalkeeper</td>
       <td>20.208333</td>
-      <td>97.686302</td>
+      <td>96.729889</td>
       <td>4.8</td>
       <td>9.0</td>
       <td>3.7</td>
@@ -118,21 +118,10 @@
       <td>Leicester</td>
       <td>Goalkeeper</td>
       <td>19.636364</td>
-      <td>108.655964</td>
+      <td>108.441598</td>
       <td>5.5</td>
       <td>10.0</td>
       <td>3.0</td>
-    </tr>
-    <tr>
-      <th>164</th>
-      <td>Mendy</td>
-      <td>Chelsea</td>
-      <td>Goalkeeper</td>
-      <td>19.215686</td>
-      <td>95.679014</td>
-      <td>5.1</td>
-      <td>11.0</td>
-      <td>3.5</td>
     </tr>
     <tr>
       <th>615</th>
@@ -140,10 +129,21 @@
       <td>West Ham</td>
       <td>Goalkeeper</td>
       <td>19.800000</td>
-      <td>95.721271</td>
+      <td>96.423535</td>
       <td>5.0</td>
-      <td>12.0</td>
+      <td>11.0</td>
       <td>3.2</td>
+    </tr>
+    <tr>
+      <th>164</th>
+      <td>Mendy</td>
+      <td>Chelsea</td>
+      <td>Goalkeeper</td>
+      <td>19.215686</td>
+      <td>94.410522</td>
+      <td>5.1</td>
+      <td>12.0</td>
+      <td>3.5</td>
     </tr>
     <tr>
       <th>7</th>
@@ -151,7 +151,7 @@
       <td>Arsenal</td>
       <td>Goalkeeper</td>
       <td>19.800000</td>
-      <td>99.378663</td>
+      <td>98.270414</td>
       <td>5.0</td>
       <td>13.0</td>
       <td>2.2</td>
@@ -162,9 +162,20 @@
       <td>Sheffield Utd</td>
       <td>Goalkeeper</td>
       <td>16.956522</td>
-      <td>76.034529</td>
+      <td>77.605694</td>
       <td>4.6</td>
       <td>14.0</td>
+      <td>3.7</td>
+    </tr>
+    <tr>
+      <th>208</th>
+      <td>Pickford</td>
+      <td>Everton</td>
+      <td>Goalkeeper</td>
+      <td>15.833333</td>
+      <td>74.927565</td>
+      <td>4.8</td>
+      <td>15.0</td>
       <td>3.7</td>
     </tr>
     <tr>
@@ -173,21 +184,10 @@
       <td>Man Utd</td>
       <td>Goalkeeper</td>
       <td>16.415094</td>
-      <td>87.249296</td>
+      <td>87.091761</td>
       <td>5.3</td>
-      <td>15.0</td>
-      <td>2.5</td>
-    </tr>
-    <tr>
-      <th>208</th>
-      <td>Pickford</td>
-      <td>Everton</td>
-      <td>Goalkeeper</td>
-      <td>15.833333</td>
-      <td>74.578237</td>
-      <td>4.8</td>
       <td>16.0</td>
-      <td>3.7</td>
+      <td>2.5</td>
     </tr>
     <tr>
       <th>511</th>
@@ -195,7 +195,7 @@
       <td>Southampton</td>
       <td>Goalkeeper</td>
       <td>18.000000</td>
-      <td>77.881935</td>
+      <td>77.106453</td>
       <td>4.5</td>
       <td>17.0</td>
       <td>0.7</td>
@@ -206,18 +206,18 @@
       <td>Newcastle</td>
       <td>Goalkeeper</td>
       <td>16.000000</td>
-      <td>81.354896</td>
+      <td>81.497040</td>
       <td>5.0</td>
       <td>18.0</td>
       <td>1.0</td>
     </tr>
     <tr>
       <th>347</th>
-      <td>Ramses Becker</td>
+      <td>Alisson</td>
       <td>Liverpool</td>
       <td>Goalkeeper</td>
       <td>13.559322</td>
-      <td>85.179282</td>
+      <td>85.489917</td>
       <td>5.9</td>
       <td>19.0</td>
       <td>1.5</td>
@@ -228,7 +228,7 @@
       <td>Brighton</td>
       <td>Goalkeeper</td>
       <td>13.777778</td>
-      <td>59.982394</td>
+      <td>59.605960</td>
       <td>4.5</td>
       <td>20.0</td>
       <td>3.0</td>
