--- a/templates/midfielders.html
+++ b/templates/midfielders.html
@@ -2,7 +2,7 @@
   <thead>
     <tr style="text-align: right;">
       <th></th>
-      <th>second_name</th>
+      <th>web_name</th>
       <th>team</th>
       <th>position</th>
       <th>value</th>
@@ -15,11 +15,11 @@
   <tbody>
     <tr>
       <th>416</th>
-      <td>Borges Fernandes</td>
+      <td>Fernandes</td>
       <td>Man Utd</td>
       <td>Midfielder</td>
       <td>17.043478</td>
-      <td>211.724524</td>
+      <td>212.248408</td>
       <td>11.5</td>
       <td>1.0</td>
       <td>5.7</td>
@@ -30,7 +30,7 @@
       <td>Liverpool</td>
       <td>Midfielder</td>
       <td>13.680000</td>
-      <td>230.034665</td>
+      <td>235.291481</td>
       <td>12.5</td>
       <td>2.0</td>
       <td>3.8</td>
@@ -41,7 +41,7 @@
       <td>Spurs</td>
       <td>Midfielder</td>
       <td>18.020833</td>
-      <td>173.786664</td>
+      <td>175.418876</td>
       <td>9.6</td>
       <td>3.0</td>
       <td>4.7</td>
@@ -52,7 +52,7 @@
       <td>Man City</td>
       <td>Midfielder</td>
       <td>21.290323</td>
-      <td>105.860536</td>
+      <td>104.972942</td>
       <td>6.2</td>
       <td>4.0</td>
       <td>5.1</td>
@@ -63,7 +63,7 @@
       <td>Leicester</td>
       <td>Midfielder</td>
       <td>18.529412</td>
-      <td>115.486120</td>
+      <td>118.935864</td>
       <td>6.8</td>
       <td>5.0</td>
       <td>4.8</td>
@@ -74,7 +74,7 @@
       <td>Chelsea</td>
       <td>Midfielder</td>
       <td>16.376812</td>
-      <td>115.396923</td>
+      <td>118.056351</td>
       <td>6.9</td>
       <td>6.0</td>
       <td>5.8</td>
@@ -85,7 +85,7 @@
       <td>Southampton</td>
       <td>Midfielder</td>
       <td>19.830508</td>
-      <td>115.625733</td>
+      <td>118.396523</td>
       <td>5.9</td>
       <td>7.0</td>
       <td>4.0</td>
@@ -96,7 +96,7 @@
       <td>Man City</td>
       <td>Midfielder</td>
       <td>11.206897</td>
-      <td>186.062465</td>
+      <td>186.061579</td>
       <td>11.6</td>
       <td>8.0</td>
       <td>3.1</td>
@@ -107,43 +107,32 @@
       <td>Man Utd</td>
       <td>Midfielder</td>
       <td>13.750000</td>
-      <td>143.053976</td>
+      <td>142.466266</td>
       <td>9.6</td>
       <td>9.0</td>
       <td>4.2</td>
     </tr>
     <tr>
       <th>663</th>
-      <td>Lomba Neto</td>
+      <td>Neto</td>
       <td>Wolves</td>
       <td>Midfielder</td>
       <td>20.350877</td>
-      <td>107.249801</td>
+      <td>108.665728</td>
       <td>5.7</td>
       <td>10.0</td>
       <td>3.3</td>
     </tr>
     <tr>
       <th>656</th>
-      <td>da Silva Neves</td>
+      <td>Neves</td>
       <td>Wolves</td>
       <td>Midfielder</td>
       <td>17.450980</td>
-      <td>83.486386</td>
+      <td>83.417277</td>
       <td>5.1</td>
       <td>11.0</td>
       <td>5.5</td>
-    </tr>
-    <tr>
-      <th>282</th>
-      <td>Tielemans</td>
-      <td>Leicester</td>
-      <td>Midfielder</td>
-      <td>16.875000</td>
-      <td>114.607420</td>
-      <td>6.4</td>
-      <td>12.0</td>
-      <td>3.2</td>
     </tr>
     <tr>
       <th>3</th>
@@ -151,10 +140,21 @@
       <td>Arsenal</td>
       <td>Midfielder</td>
       <td>9.203540</td>
-      <td>120.858089</td>
+      <td>126.389758</td>
       <td>11.3</td>
-      <td>13.0</td>
+      <td>12.0</td>
       <td>6.4</td>
+    </tr>
+    <tr>
+      <th>282</th>
+      <td>Tielemans</td>
+      <td>Leicester</td>
+      <td>Midfielder</td>
+      <td>16.875000</td>
+      <td>114.894284</td>
+      <td>6.4</td>
+      <td>13.0</td>
+      <td>3.2</td>
     </tr>
     <tr>
       <th>285</th>
@@ -162,7 +162,7 @@
       <td>Leicester</td>
       <td>Midfielder</td>
       <td>16.527778</td>
-      <td>114.764045</td>
+      <td>114.945262</td>
       <td>7.2</td>
       <td>14.0</td>
       <td>3.2</td>
@@ -173,18 +173,18 @@
       <td>Man City</td>
       <td>Midfielder</td>
       <td>13.456790</td>
-      <td>114.478241</td>
+      <td>115.374465</td>
       <td>8.1</td>
       <td>15.0</td>
       <td>4.5</td>
     </tr>
     <tr>
       <th>331</th>
-      <td>Dias Belloli</td>
+      <td>Raphinha</td>
       <td>Leeds</td>
       <td>Midfielder</td>
       <td>17.090909</td>
-      <td>90.079227</td>
+      <td>90.520644</td>
       <td>5.5</td>
       <td>16.0</td>
       <td>4.2</td>
@@ -195,7 +195,7 @@
       <td>Aston Villa</td>
       <td>Midfielder</td>
       <td>16.973684</td>
-      <td>130.098250</td>
+      <td>130.604690</td>
       <td>7.6</td>
       <td>17.0</td>
       <td>0.7</td>
@@ -206,7 +206,7 @@
       <td>Leeds</td>
       <td>Midfielder</td>
       <td>18.518519</td>
-      <td>95.215539</td>
+      <td>95.943708</td>
       <td>5.4</td>
       <td>18.0</td>
       <td>2.3</td>
@@ -217,7 +217,7 @@
       <td>West Ham</td>
       <td>Midfielder</td>
       <td>21.132075</td>
-      <td>85.426958</td>
+      <td>86.503559</td>
       <td>5.3</td>
       <td>19.0</td>
       <td>1.2</td>
@@ -228,7 +228,7 @@
       <td>Man City</td>
       <td>Midfielder</td>
       <td>15.573770</td>
-      <td>89.696289</td>
+      <td>90.505135</td>
       <td>6.1</td>
       <td>20.0</td>
       <td>3.5</td>
